# cfr-test

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  DATA  README.md
lib/fromloader/: CMakeLists.txt
lib/fromloader/binder/: binder.cpp  binder.h
lib/fromloader/binder/bnd/: bnd3.cpp  bnd3.h
lib/fromloader/dep/0/: binder.h  file.cpp  file.h
lib/fromloader/file/: file.cpp  file.h
lib/fromloader/src/: open.cpp  open.h
lib/fromloader/src/formats/: include.h
lib/fromloader/src/formats/binder/: binder.cpp  binder.h  include.h
lib/fromloader/src/formats/binder/bdf/: bdf3.h
lib/fromloader/src/formats/binder/bnd/: bnd3.cpp  bnd3.h  bnd4.h
lib/fromloader/src/formats/dcx/: dcx.cpp  dcx.h
lib/fromloader/src/formats/flver/flver2/: flver2.cpp  flver2.h
lib/fromloader/src/formats/paramdef/: paramdef.cpp  paramdef.h
lib/fromloader/src/util/: include.h
lib/fromloader/src/util/dcx/: dcx.cpp  dcx.h
lib/fromloader/src/util/endian/: endian.cpp  endian.h
lib/fromloader/src/util/file/: file.h
lib/fromloader/src/util/fileio/: fileio.cpp
lib/fromloader/src/util/inflate/: inflate.h
lib/fromloader/src/util/math/: math.h
lib/fromloader/src/util/stringio/: stringio.cpp  stringio.h
lib/fromloader/src/util/types/: types.cpp  types.h
lib/fromloader/src/util/validate/: validate.cpp  validate.h
lib/fromloader/util/: util.h
lib/fromloader/util/fileio/: fileio.h
lib/fromloader/util/stringio/: stringio.cpp  stringio.h
lib/fromloader/util/umem/: umem.c  umem.h
lib/umem/: CMakeLists.txt  umem.c  umem.h
src/: CMakeLists.txt  main.cpp  main.h  mainold.cpp
src/tests/from/: f_test.h
